// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testeando componente <ProductImage /> Debe mostrar la imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Testeando componente <ProductImage /> No debe mostrar la imagen 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
